infrastructure/traefik/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-auth
  namespace: traefik
spec:
  basicAuth:
    secret: api-credentials
