infrastructure/traefik/middleware-transform.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-transform
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      X-Custom-Header: "CustomValue"
    customResponseHeaders:
      X-Response-Header: "ResponseValue"
