infrastructure/traefik/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.30.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      name: web
    - port: 443
      targetPort: 8443
      nodePort: 30443
      name: websecure
